edit fixed header and footer on signup, delete extra a tag on about, change green briefcase to blue, text align center on employed text

--- a/public/stylesheets/base/_base.scss
+++ b/public/stylesheets/base/_base.scss
@@ -198,6 +198,7 @@
 
 #employed {
 	margin-bottom: 80px;
+	text-align: center;
 }
 
 .header-image {
